* fix UCR checks for samba4/service/smb (Bug #30968)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45272 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.27-6) unstable; urgency=low
+
+  * fix UCR checks for samba4/service/smb (Bug #30968)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 17:06:29 +0200
+
 univention-samba4 (3.0.27-5) unstable; urgency=low
 
   * Add missing include in setup-s4.sh (Bug #31106)
