--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,11 @@
+univention-directory-manager-modules (9.0.63-1) unstable; urgency=low
+
+  * admincli/admin.py: do not save properties of superordinate object
+    in module_information() because otherwise the property types gets 
+    mixed up (Bug #32671)
+
+ -- Felix Botner <botner@univention.de>  Thu, 17 Oct 2013 17:04:13 +0200
+
 univention-directory-manager-modules (9.0.64-1) unstable; urgency=low
 
   * fixed 18python-univention-directory-manager.inst (Bug #31408) 
