ONLY remove obsolete app errata settings from UCR (Bug #30904)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45276 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.41-1) unstable; urgency=low
+
+  * ONLY remove obsolete app errata settings from UCR (Bug #30904)
+
+ -- Lukas Walter <walter@univention.de>  Thu, 17 Oct 2013 17:10:00 +0200
+
 univention-management-console-module-appcenter (3.0.40-1) unstable; urgency=low
 
   * remove obsolete app errata respositories from UCR (Bug #30904)
