--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.145-4) unstable; urgency=low
+
+  * More adjustments (Bug #32554)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 17:33:33 +0200
+
 ucs-test (4.0.145-3) unstable; urgency=low
 
   * Adjust udm-extension tests (Bug #32554)
