--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.27-7) unstable; urgency=low
+
+  * Remove obsolete create_dns-host_spn.py (Bug #28371)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 17:44:26 +0200
+
 univention-samba4 (3.0.27-6) unstable; urgency=low
 
   * fix UCR checks for samba4/service/smb (Bug #30968)
