--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.27-8) unstable; urgency=low
+
+  * Run dbcheck --fix in postinst (Bug #31698)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 17 Oct 2013 19:46:54 +0200
+
 univention-samba4 (3.0.27-7) unstable; urgency=low
 
   * Remove obsolete create_dns-host_spn.py (Bug #28371)
