--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.66-1) unstable; urgency=low
+
+  * Implement groupType change handling (Bug #32767)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 17 Oct 2013 21:40:14 +0200
+
 univention-directory-manager-modules (9.0.65-1) unstable; urgency=low
 
   * admincli/admin.py: do not save properties of superordinate object
