--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.146-2) unstable; urgency=low
+
+  * 62_udm-groups/23_group_modify_grouptype: more groupType change
+    restrictions (Bug #32767)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 17 Oct 2013 21:52:35 +0200
+
 ucs-test (4.0.146-1) unstable; urgency=low
 
   * 62_udm-groups/23_group_modify_grouptype: added new test case to
