* Added more groupType change restrictions (Bug #32767)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45299 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (9.0.67-1) unstable; urgency=low
+
+  * Added more groupType change restrictions (Bug #32767)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 17 Oct 2013 21:54:34 +0200
+
 univention-directory-manager-modules (9.0.66-1) unstable; urgency=low
 
   * Implement groupType change handling (Bug #32767)
