--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.49-1) unstable; urgency=low
+
+  * Bug #23214: Add very simple computer wizards
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 18 Oct 2013 01:01:01 +0200
+
 univention-management-console-module-udm (4.0.48-1) unstable; urgency=low
 
   * Bug #32389: adapt license dialog
