--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.50-1) unstable; urgency=low
+
+  * Bug #32389: split license dialog into two dialogues: import new license,
+  	license information
+
+ -- Florian Best <best@univention.de>  Fri, 18 Oct 2013 10:18:12 +0200
+
 univention-management-console-module-udm (4.0.49-1) unstable; urgency=low
 
   * Bug #23214: Add very simple computer wizards
