--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.107-1) unstable; urgency=low
+
+  * Bug #32389: split license into two menu entries: import new
+  	license, license information
+
+ -- Florian Best <best@univention.de>  Fri, 18 Oct 2013 10:52:38 +0200
+
 univention-management-console-frontend (3.0.106-1) unstable; urgency=low
 
   * Bug #30811: evaluate startup wizard input, add license activation dialogue
