* Bug #32389: fix fuzzy
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45309 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.108-1) unstable; urgency=low
+
+  * Bug #32389: fix fuzzy
+
+ -- Florian Best <best@univention.de>  Fri, 18 Oct 2013 11:01:08 +0200
+
 univention-management-console-frontend (3.0.107-1) unstable; urgency=low
 
   * Bug #32389: split license into two menu entries: import new
