* Bug #32389: show license import dialog after activation
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45311 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/umc/de.po
+++ b/management/univention-management-console-frontend/umc/de.po
@@ -76,10 +76,8 @@ msgid "Activate UCS"
 msgstr "UCS aktivieren"
 
 #: umc/app.js:1668
-msgid ""
-"Activation is not possible because the UDM module is not available. Probably "
-"because of insufficient permissions."
-msgstr "Aktivierung is nicht möglich aufgrund nicht verfügbarem UDM-Modul. Wahrscheinlich wegen nicht ausreichenden Berechtigungen."
+msgid "Activation is not possible. Please login as Administrator on the DC master."
+msgstr "Aktivierung is nicht möglich. Bitte als Administrator auf dem DC Master einloggen."
 
 #: umc/widgets/MultiObjectSelect.js:120 umc/widgets/MultiObjectSelect.js:266
 msgid "Add"
@@ -496,7 +494,7 @@ msgstr ""
 "abgelaufen."
 
 #: umc/app.js:1664
-msgid "The license has already been activated"
+msgid "The license has already been activated."
 msgstr "Die Lizenz wurde bereits aktiviert."
 
 #: umc/widgets/LoginDialog.js:169
