--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.109-1) unstable; urgency=low
+
+  * Bug #32389: show license import dialog after activation
+
+ -- Florian Best <best@univention.de>  Fri, 18 Oct 2013 11:36:08 +0200
+
 univention-management-console-frontend (3.0.108-1) unstable; urgency=low
 
   * Bug #32389: fix fuzzy
