--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.42-1) unstable; urgency=low
+
+  * Bug #32389: move license request into UDM module
+
+ -- Florian Best <best@univention.de>  Fri, 18 Oct 2013 11:37:20 +0200
+
 univention-management-console-module-appcenter (3.0.41-1) unstable; urgency=low
 
   * ONLY remove obsolete app errata settings from UCR (Bug #30904)
