* Bug #30811: added translations for startup wizard
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45315 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.110-1) unstable; urgency=low
+
+  * Bug #30811: added translations for startup wizard
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 18 Oct 2013 12:03:53 +0200
+
 univention-management-console-frontend (3.0.109-1) unstable; urgency=low
 
   * Bug #32389: show license import dialog after activation
