--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.7-1) unstable; urgency=low
+
+  * added mail/postfix/ssl/cafile and mail/postfix/ssl/capath (Bug #28124)
+
+ -- Felix Botner <botner@univention.de>  Fri, 18 Oct 2013 12:38:58 +0200
+
 univention-mail-postfix (8.0.6-2) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30945)
