* Bug #32389: adaptions to license import dialog
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45318 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.51-1) unstable; urgency=low
+
+  * Bug #32389: adaptions to license import dialog
+
+ -- Florian Best <best@univention.de>  Fri, 18 Oct 2013 12:56:35 +0200
+
 univention-management-console-module-udm (4.0.50-1) unstable; urgency=low
 
   * Bug #32389: split license dialog into two dialogues: import new license,
