added mail/cyrus/ssl/capath and mail/cyrus/ssl/cafile (Bug #28123)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45319 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/mail/univention-mail-cyrus/debian/changelog
+++ b/mail/univention-mail-cyrus/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-cyrus (6.0.5-1) unstable; urgency=low
+
+  * added mail/cyrus/ssl/capath and mail/cyrus/ssl/cafile (Bug #28123) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 18 Oct 2013 13:36:43 +0200
+
 univention-mail-cyrus (6.0.4-6) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30945)
