--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.51-2) unstable; urgency=low
+
+  * Assign new Syntax UNIX_AccessRight_extended to new Widget 
+    UnixAccessRightsExtended (Bug #15087) 
+
+ -- Erik Damrose <damrose@univention.de>  Fri, 18 Oct 2013 14:54:58 +0200
+
 univention-management-console-module-udm (4.0.51-1) unstable; urgency=low
 
   * Bug #32389: adaptions to license import dialog
