--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.10-1) unstable; urgency=low
+
+  * [WIP]? Bug #32751: reimplement icon actions
+
+ -- Florian Best <best@univention.de>  Fri, 18 Oct 2013 15:14:31 +0200
+
 univention-virtual-machine-manager-daemon (3.0.9-1) unstable; urgency=low
 
   * Replace TightVnc with noVNC (Bug #30540)
