* Workaround for timing issue in 10_ldap/70schema_unregistration_basis   (Bug #26785)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45337 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.147-1) unstable; urgency=low
+
+  * Workaround for timing issue in 10_ldap/70schema_unregistration_basis
+    (Bug #26785)
+
+ -- Arvid Requate <requate@univention.de>  Fri, 18 Oct 2013 16:12:46 +0200
+
 ucs-test (4.0.146-2) unstable; urgency=low
 
   * 62_udm-groups/23_group_modify_grouptype: more groupType change
