* Bug #30629: Adapt wording in case license request dialog is unavailable. Use SSO to switch to master system
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45343 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.43-1) unstable; urgency=low
+
+  * Bug #30629: Adapt wording in case license request dialog is unavailable.
+    Use SSO to switch to master system
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 18 Oct 2013 18:01:29 +0200
+
 univention-management-console-module-appcenter (3.0.42-1) unstable; urgency=low
 
   * Bug #32389: move license request into UDM module
