* Wait for dns- replication only if it is not ignored (Bug #32871)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45348 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,9 @@
+univention-samba4 (3.0.28-1) unstable; urgency=low
+
+  * Wait for dns- replication only if it is not ignored (Bug #32871)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 18 Oct 2013 19:33:02 +0200
+
 univention-samba4 (3.0.27-9) unstable; urgency=low
 
   * Re-commit /etc/krb5.keytab, was missing on some fresh installations
