* Bug #23214: Add IP, MAC, network to computers wizard
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45351 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-udm (4.0.53-1) unstable; urgency=low
+
+  * Bug #23214: Add IP, MAC, network to computers wizard
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Sat, 19 Oct 2013 02:47:16 +0200
+
 univention-management-console-module-udm (4.0.52-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
