Bug #32554: added changelog entry
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45358 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.148-1) unstable; urgency=low
+
+  * Bug #32554: added new checks for ucs_registerLDAPExtension
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Sun, 20 Oct 2013 00:44:07 +0200
+
 ucs-test (4.0.147-1) unstable; urgency=low
 
   * Workaround for timing issue in 10_ldap/70schema_unregistration_basis
