--- a/mail/univention-mail-cyrus/debian/changelog
+++ b/mail/univention-mail-cyrus/debian/changelog
@@ -1,3 +1,10 @@
+univention-mail-cyrus (6.0.5-2) unstable; urgency=low
+
+  * Improve UCR variable descriptions for mail/cyrus/ssl/capath and mail/cyrus/ssl/cafile
+    (Bug #28123) 	
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Mon, 21 Oct 2013 09:02:14 +0200
+
 univention-mail-cyrus (6.0.5-1) unstable; urgency=low
 
   * added mail/cyrus/ssl/capath and mail/cyrus/ssl/cafile (Bug #28123) 
