--- a/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
+++ b/virtualization/univention-virtual-machine-manager-daemon/debian/changelog
@@ -1,3 +1,9 @@
+univention-virtual-machine-manager-daemon (3.0.11-1) unstable; urgency=low
+
+  * Bug #32751: position grid action icons in the center
+
+ -- Florian Best <best@univention.de>  Mon, 21 Oct 2013 09:42:32 +0200
+
 univention-virtual-machine-manager-daemon (3.0.10-1) unstable; urgency=low
 
   * [WIP]? Bug #32751: reimplement icon actions
