--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.24-1) unstable; urgency=low
+
+  * fixed typo in UMC module description (Bug #32022)
+
+ -- Lukas Walter <walter@univention.de>  Mon, 21 Oct 2013 10:36:03 +0200
+
 univention-updater (9.0.23-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
