corrected UMC module description (Bug #32022)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45367 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-mrtg/debian/changelog
+++ b/management/univention-management-console-module-mrtg/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-mrtg (2.0.5-1) unstable; urgency=low
+
+  * corrected UMC module description (Bug #32022)
+
+ -- Lukas Walter <walter@univention.de>  Mon, 21 Oct 2013 10:58:14 +0200
+
 univention-management-console-module-mrtg (2.0.4-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
