* Bug #30811: s/Lizenz-Informationen/Lizenzinformationen/
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45368 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.115-1) unstable; urgency=low
+
+  * Bug #30811: s/Lizenz-Informationen/Lizenzinformationen/
+
+ -- Florian Best <best@univention.de>  Mon, 21 Oct 2013 11:10:37 +0200
+
 univention-management-console-frontend (3.0.114-1) unstable; urgency=low
 
   * Bug #15087: fix de.po which was broken due to svn45333
