--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-2) unstable; urgency=low
+
+  * Add replication access for UCS@school DC Slaves (Bug #32411)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 21 Oct 2013 11:16:11 +0200
+
 univention-ldap (10.0.17-1) unstable; urgency=low
 
   * init.d/slapd: tempfile, boolean (Bug #31989)
