Bug #32931: Split IP calculation into re-usable module
Bump version for UCS-3.2
Update copyright.
Enable unit test.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45379 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-ipcalc/debian/changelog
+++ b/base/univention-ipcalc/debian/changelog
@@ -1,3 +1,10 @@
+univention-ipcalc (5.0.0-1) unstable; urgency=low
+
+  * Bump version for UCS 3.2
+  * Split IP calculation into re-usable module (Bug #32931)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 21 Oct 2013 13:09:08 +0200
+
 univention-ipcalc (4.0.0-3) unstable; urgency=low
 
   * Convert spaces to tab (Bug #28143, Bug #25626)
