--- a/base/univention-ipcalc/debian/changelog
+++ b/base/univention-ipcalc/debian/changelog
@@ -1,3 +1,9 @@
+univention-ipcalc (5.0.0-2) unstable; urgency=low
+
+  * Add missing Build-Depends: python-ipaddr (Bug #32931)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 21 Oct 2013 13:31:15 +0200
+
 univention-ipcalc (5.0.0-1) unstable; urgency=low
 
   * Bump version for UCS 3.2
