* Bug #32782: fix build process
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45387 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend-doc/debian/changelog
+++ b/management/univention-management-console-frontend-doc/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend-doc (7.0.1-1) unstable; urgency=low
+
+  * Bug #32782: fix build process
+
+ -- Florian Best <best@univention.de>  Mon, 21 Oct 2013 15:41:35 +0200
+
 univention-management-console-frontend-doc (7.0.0-1) unstable; urgency=low
 
   * Bug #32782: fix build process
