--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,9 @@
+univention-installer (9.0.28-1) unstable; urgency=low
+
+  * Bug #32634: add UEFI graphic modules
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 21 Oct 2013 17:04:14 +0200
+
 univention-installer (9.0.27-1) unstable; urgency=low
 
   * fixed device guessing in 67_bootloader.py (Bug #32632) 
