Bug #32634: switched video mode from 788 (800x600x16) to 789 (800x600x24)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45390 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,6 +1,7 @@
 univention-installer (9.0.28-1) unstable; urgency=low
 
   * Bug #32634: add UEFI graphic modules
+  * Bug #32634: switched video mode from 788 (800x600x16) to 789 (800x600x24)
 
  -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Mon, 21 Oct 2013 17:04:14 +0200
 
