* Bug #30629: Switch back to app details after solution button is clicked
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45391 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.45-1) unstable; urgency=low
+
+  * Bug #30629: Switch back to app details after solution button is clicked
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 21 Oct 2013 17:16:51 +0200
+
 univention-management-console-module-appcenter (3.0.44-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
