Bug #28670: USS: convert to Python
Add unit tests.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@45403 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-system-setup/debian/changelog
+++ b/base/univention-system-setup/debian/changelog
@@ -1,3 +1,9 @@
+univention-system-setup (7.0.51-1) unstable; urgency=low
+
+  * Convert network script to Python (Bug #28670)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 22 Oct 2013 01:18:50 +0200
+
 univention-system-setup (7.0.50-1) unstable; urgency=low
 
   * revised UMC module description (Bug #32022)
